--- a/index.html
+++ b/index.html
@@ -80,6 +80,185 @@
             </div>
             <div class="posts">
                 <h2 class="post_date"><span>25. November 2014</span></h2>
+                <div class="post gallery">
+                    <div class="post_header">
+                        <div class="post_avatar">
+                            <img src="images/avatar.png">
+                        </div>
+                        <div class="post_user">
+                            <div class="user_name">
+                                Stephanie Malgara
+                            </div>
+                            <div class="user_company">
+                                ProSiebenSat.1 Media AG
+                            </div>
+                            <div class="user_group">
+                                ist der Gruppe beigetretten
+                            </div>
+                        </div>
+                        <div class="post_time">
+                            21:20
+                        </div>
+                    </div>
+                    <div class="post_content">
+                        <div class="photo_thumb">
+                            <img src="images/photos/photo.jpg">
+                        </div>
+                        <div class="photo_thumb">
+                            <img src="images/photos/photo.jpg">
+                        </div>
+                        <div class="photo_thumb">
+                            <img src="images/photos/photo.jpg">
+                        </div>
+                        <div class="photo_thumb">
+                            <div class="last_photo_thumb">
+                                <span class="photo_plus_symbol">+</span>
+                                <span class="photo_count">56 photos</span>
+                            </div>
+                            <img src="images/photos/photo.jpg">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="post text_photo">
+                    <div class="post_header">
+                        <div class="post_avatar">
+                            <img src="images/avatar.png">
+                        </div>
+                        <div class="post_user">
+                            <div class="user_name">
+                                Stephanie Malgara
+                            </div>
+                            <div class="user_company">
+                                ProSiebenSat.1 Media AG
+                            </div>
+                            <div class="user_group">
+                                ist der Gruppe beigetretten
+                            </div>
+                        </div>
+                        <div class="post_time">
+                            21:20
+                        </div>
+                    </div>
+                    <div class="post_content">
+                        <div class="photo_thumb">
+                            <img src="images/photos/photo.jpg">
+                        </div>
+                        <div class="post_text_block">
+                            <h2 class="post_text_header">
+                                Susto odio dignissimos ducimus qui
+                            </h2>
+                            <div class="post_text">
+                                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum. Susto odio dignissimos ducimus qui odio dignissimos.
+                                <button class="more_text">
+                                    <i class="fa fa-plus-circle"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="post_buttons">
+                        <button class="post_comment">
+                            5 <i class="fa fa-comment-o"></i>
+                        </button>
+                        <button class="post_likes">
+                            12 <i class="fa fa-heart-o"></i>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="post text">
+                    <div class="post_header">
+                        <div class="post_avatar">
+                            <img src="images/avatar.png">
+                        </div>
+                        <div class="post_user">
+                            <div class="user_name">
+                                Stephanie Malgara
+                            </div>
+                            <div class="user_company">
+                                ProSiebenSat.1 Media AG
+                            </div>
+                            <div class="user_group">
+                                ist der Gruppe beigetretten
+                            </div>
+                        </div>
+                        <div class="post_time">
+                            21:20
+                        </div>
+                    </div>
+                    <div class="post_content">
+                        <div class="post_text_block">
+                            <h2 class="post_text_header">
+                                Susto odio dignissimos ducimus qui
+                            </h2>
+                            <div class="post_text">
+                                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum. Susto odio dignissimos ducimus qui odio dignissimos.
+                                <button class="more_text">
+                                    <i class="fa fa-plus-circle"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="post_buttons">
+                        <button class="post_comment">
+                            5 <i class="fa fa-comment-o"></i>
+                        </button>
+                        <button class="post_likes">
+                            12 <i class="fa fa-heart-o"></i>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="post repost_text">
+                    <div class="repost_header">
+                        <div class="repost_avatar">
+                            <img src="images/repost-avatar.png">
+                        </div>
+                        <div class="repost_name">
+                            Zeshen
+                        </div>
+                        <div class="post_time">
+                            21:20
+                        </div>
+                    </div>
+                    <div class="post_header">
+                        <div class="post_avatar">
+                            <img src="images/avatar.png">
+                        </div>
+                        <div class="post_user">
+                            <div class="user_name">
+                                Stephanie Malgara
+                            </div>
+                            <div class="user_company">
+                                ProSiebenSat.1 Media AG
+                            </div>
+                            <div class="user_group">
+                                ist der Gruppe beigetretten
+                            </div>
+                        </div>
+                    </div>
+                    <div class="post_content">
+                        <div class="post_text_block">
+                            <h2 class="post_text_header">
+                                Susto odio dignissimos ducimus qui
+                            </h2>
+                            <div class="post_text">
+                                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum. Susto odio dignissimos ducimus qui odio dignissimos.
+                                <button class="more_text">
+                                    <i class="fa fa-plus-circle"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="post_buttons">
+                        <button class="post_comment">
+                            5 <i class="fa fa-comment-o"></i>
+                        </button>
+                        <button class="post_likes">
+                            12 <i class="fa fa-heart-o"></i>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
